--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -36,14 +36,24 @@ const mods = [
     source: "https://github.com/Let-s-Do-Collection/BloomingNature",
     tags: ["plants", "decor", "worldgen", "nature", "biomes"],
   },
-  {
-    title: "Brewery",
-    logo: "/assets/mod-logos/brewery.png",
-    description: "Brewing, drinks, barrels, and cozy tavern-style atmosphere for your world.",
-    wiki: "/docs/mods/brewery/",
-    source: "https://github.com/Let-s-Do-Collection/Brewery",
-    tags: ["drinks", "brewing", "decor", "atmosphere", "food"],
-  },
+{
+  title: "Brewery",
+  logo: "/assets/mod-logos/brewery.png",
+  description: "Brewing, beer, food, and a festive tavern atmosphere built around interactive brewing.",
+  wiki: "/wiki/brewery/",
+  source: "https://github.com/Let-s-Do-Collection/Brewery",
+  tags: [
+    "brewing",
+    "beer",
+    "drinks",
+    "food",
+    "atmosphere",
+    "tavern",
+    "festive",
+    "multiblock",
+    "minigame"
+  ],
+},
   {
     title: "Camping",
     logo: "/assets/mod-logos/camping.png",
