--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,14 +1,34 @@
+---
+const { pathname } = Astro.url
+
+const isActive = (path) => {
+  if (path === '/') return pathname === '/'
+  return pathname.startsWith(path)
+}
+---
+
 <nav class="nav">
   <div class="navInner">
-    <a class="brand" href="/">
+<a class="brand" href="/" data-tooltip="Return Home">
       <img src="/assets/chest_logo.png" alt="Let's Do" class="logo" />
       <span class="brandText">Let's Do</span>
     </a>
 
+
+
     <div class="links">
-      <a href="/about/">About</a>
-      <a href="/faq/">FAQ</a>
-      <a href="/mods/">Mods</a>
+      <a href="/about/" class={isActive('/about') ? 'active' : ''}>
+        About
+      </a>
+
+      <a href="/faq/" class={isActive('/faq') ? 'active' : ''}>
+        FAQ
+      </a>
+
+      <a href="/mods/" class={isActive('/mods') ? 'active' : ''}>
+        Mods
+      </a>
+
       <a
         href="https://github.com/Let-s-Do-Collection"
         target="_blank"
@@ -16,6 +36,7 @@
       >
         GitHub
       </a>
+
       <a
         class="download"
         href="https://modrinth.com/user/satisfyu"
