--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -10,7 +10,7 @@ const isActive = (path) => {
 <nav class="nav">
   <div class="navInner">
 <a class="brand" href="/" data-tooltip="Return Home">
-      <img src="/assets/chest_logo.png" alt="Let's Do" class="logo" />
+      <img src="/assets/icons/ui/chest_logo.png" alt="Let's Do" class="logo" />
       <span class="brandText">Let's Do</span>
     </a>
 
