--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -170,10 +170,9 @@ tags: [
     title: "Vinery",
     logo: "/assets/mod-logos/vinery.png",
     description: "Wine making, vineyards, and cozy rustic decor for long-term worlds.",
-    wiki: "/docs/mods/vinery/",
+    wiki: "/wiki/vinery/",
     source: "https://github.com/Let-s-Do-Collection/Vinery",
-    tags: ["wine", "farming", "decor", "atmosphere", "brewing"],
-  },
+tags: ["wine", "winemaking", "vineyard", "farming", "decor", "atmosphere"],  },
   {
     title: "WilderNature",
     logo: "/assets/mod-logos/wildernature.png",
